hphp/test/zend/good/ext/mbstring/tests/mb_strcut_missing_boundary_check.php.skipif
<?hh
extension_loaded('mbstring') || die('skip');
function_exists('mb_convert_encoding') || die("skip mb_convert_encoding() is not available in this build");
