hphp/test/zend/bad/ext/mbstring/tests/mb_stristr_error1.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_stristr') or die("skip mb_stristr() is not available in this build");
?>